fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  div {
-    background-color: #f9f9f9;
-  }
 }
